--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
-    "howler": "^2.2.4",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
-    "react-use": "^17.6.0",
-    "use-sound": "^5.0.0"
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/howler": "^2.2.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
